--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>property-frontend</title>
+    
+    <title>Vastgoed Dashboard | Vind uw droomwoning</title>
+    <meta name="description" content="Bekijk ons actuele aanbod van woningen en appartementen. Gebruik onze geavanceerde filters om direct de ideale woning te vinden." />
+
+    <link rel="preconnect" href="https://dev-property-dashboard.pantheonsite.io" />
+    <link rel="dns-prefetch" href="https://dev-property-dashboard.pantheonsite.io" />
+
+    <style>
+      body { font-display: swap; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
